--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
 /* Basic reset for html and body */
+/* CSS Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap');
 
 @font-face {
